# aiine_transform

./: .gitignore  CMakeLists.txt  README.md  main.cpp
common_helper/: CMakeLists.txt  bounding_box.cpp  bounding_box.h  common_helper_cv.cpp  common_helper_cv.h
image_processor/: CMakeLists.txt  image_processor.cpp  image_processor.h  image_processor_if.h
resource/model/: dbface_mbnv2_480x640.tflite  face_detection_back_256x256_float32.tflite  face_detection_front_128x128_float32.tflite
